Fixed vertical alignment for Sent Perls component

--- a/src/components/dashboard/quicksend/quicksend.scss
+++ b/src/components/dashboard/quicksend/quicksend.scss
@@ -1,11 +1,5 @@
-.left-right-padding {
-    padding-left: 20px;
-    padding-right: 20px;
-    word-wrap: break-word;
-}
-
 .right-padding {
-    padding-right: 20px;
+    padding-right: 15px;
     word-wrap: break-word;
 }
 
@@ -31,4 +25,11 @@ input::placeholder {
 .table-inner {
     display: table-cell;
     vertical-align: middle;
+}
+
+.perlsSent {
+    max-width: 100%;
+    height: 100px;
+    word-wrap: break-word;
+    font-size: 20px;
 }
